RESOLVED FIXED292892
Fix TestWebKitAPI.SiteIsolation.RunOpenPanel after 294726@main
https://bugs.webkit.org/show_bug.cgi?id=292892
Summary Fix TestWebKitAPI.SiteIsolation.RunOpenPanel after 294726@main
Alex Christensen
Reported 2025-05-12 16:52:17 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-12 16:52:27 PDT
Alex Christensen
Comment 2 2025-05-12 16:53:48 PDT
EWS
Comment 3 2025-05-12 17:00:05 PDT
Committed 294812@main (652d42ddbb5d): <https://commits.webkit.org/294812@main> Reviewed commits have been landed. Closing PR #45277 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.