Fix TestWebKitAPI.SiteIsolation.RunOpenPanel after 294726@main https://bugs.webkit.org/show_bug.cgi?id=292892 rdar://151183408

Reviewed by Aditya Keerthi.

Reduce the behavior change to where Quirks::shouldTranscodeHeicImagesForURL and needsSiteSpecificQuirks
both return true, which seems to be the intent of the original change.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didChooseFilesForOpenPanelWithImageTranscoding):

Canonical link: https://commits.webkit.org/294812@main